changed id's of checkboxes

--- a/public/index.html
+++ b/public/index.html
@@ -86,108 +86,108 @@
                                             <div class="filter-form-title grey darken-4">Filter Items</div>
                                             <div class="form-body">
                                                 <p>
-                                                    <input type="checkbox" id="filter-all" />
-                                                    <label for="filter-all">All Items</label>
+                                                    <input type="checkbox" id="All" />
+                                                    <label for="All">All Items</label>
                                                 </p>
                                                 <p>
-                                                    <input type="checkbox" id="filter-starting" />
-                                                    <label for="filter-starting">Starting Items</label>
+                                                    <input type="checkbox" id="Starting" />
+                                                    <label for="Starting">Starting Items</label>
+                                                </p>
                                                     <p class="filter-indent">
                                                     <input type="checkbox" id="Jungle" />
                                                     <label for="Jungle">Jungle</label>
                                                 </p>
                                                 <p class="filter-indent">
-                                                    <input type="checkbox" id="filter-lane" />
-                                                    <label for="filter-lane">Lane</label>
-                                                </p>
-                                                </p>
-                                                <p>
-                                                    <input type="checkbox" id="filter-tools" />
-                                                    <label for="filter-tools">Tools</label>
-                                                </p>
-                                                <p class="filter-indent">
-                                                    <input type="checkbox" id="filter-consumable" />
-                                                    <label for="filter-consumable">Consumable</label>
-                                                </p>
-                                                <p class="filter-indent">
-                                                    <input type="checkbox" id="filter-gold" />
-                                                    <label for="filter-gold">Gold Income</label>
-                                                </p>
-                                                <p class="filter-indent">
-                                                    <input type="checkbox" id="filter-vision" />
-                                                    <label for="filter-vision">Vision & Trinkets</label>
+                                                    <input type="checkbox" id="Lane" />
+                                                    <label for="Lane">Lane</label>
                                                 </p>
                                                 <p>
-                                                    <input type="checkbox" id="filter-defense" />
-                                                    <label for="filter-defense">Defense</label>
+                                                    <input type="checkbox" id="Tools" />
+                                                    <label for="Tools">Tools</label>
                                                 </p>
                                                 <p class="filter-indent">
-                                                    <input type="checkbox" id="filter-armor" />
-                                                    <label for="filter-armor">Armor</label>
+                                                    <input type="checkbox" id="Consumable" />
+                                                    <label for="Consumable">Consumable</label>
                                                 </p>
                                                 <p class="filter-indent">
-                                                    <input type="checkbox" id="filter-health" />
-                                                    <label for="filter-health">Health</label>
+                                                    <input type="checkbox" id="GoldPer" />
+                                                    <label for="GoldPer">Gold Income</label>
                                                 </p>
                                                 <p class="filter-indent">
-                                                    <input type="checkbox" id="filter-healthregen" />
-                                                    <label for="filter-healthregen">Health Regen</label>
-                                                </p>
-                                                <p class="filter-indent">
-                                                    <input type="checkbox" id="filter-mr" />
-                                                    <label for="filter-mr">Magic Resist</label>
+                                                    <input type="checkbox" id="Trinket Vision" />
+                                                    <label for="Trinket Vision">Vision & Trinkets</label>
                                                 </p>
                                                 <p>
-                                                    <input type="checkbox" id="filter-attack" />
-                                                    <label for="filter-attack">Attack</label>
+                                                    <input type="checkbox" id="Defense" />
+                                                    <label for="Defense">Defense</label>
                                                 </p>
                                                 <p class="filter-indent">
-                                                    <input type="checkbox" id="filter-attackspeed" />
-                                                    <label for="filter-attackspeed">Attack Speed</label>
+                                                    <input type="checkbox" id="Armor" />
+                                                    <label for="Armor">Armor</label>
                                                 </p>
                                                 <p class="filter-indent">
-                                                    <input type="checkbox" id="filter-crit" />
-                                                    <label for="filter-crit">Critical Strike</label>
+                                                    <input type="checkbox" id="Health" />
+                                                    <label for="Health">Health</label>
                                                 </p>
                                                 <p class="filter-indent">
-                                                    <input type="checkbox" id="filter-damage" />
-                                                    <label for="filter-damage">Damage</label>
+                                                    <input type="checkbox" id="HealthRegen" />
+                                                    <label for="HealthRegen">Health Regen</label>
                                                 </p>
                                                 <p class="filter-indent">
-                                                    <input type="checkbox" id="filter-lifesteal" />
-                                                    <label for="filter-lifesteal">Life Steal</label>
+                                                    <input type="checkbox" id="SpellBlock" />
+                                                    <label for="SpellBlock">Magic Resist</label>
                                                 </p>
                                                 <p>
-                                                    <input type="checkbox" id="filter-magic" />
-                                                    <label for="filter-magic">Magic</label>
+                                                    <input type="checkbox" id="Attack" />
+                                                    <label for="Attack">Attack</label>
                                                 </p>
                                                 <p class="filter-indent">
-                                                    <input type="checkbox" id="filter-cdr" />
-                                                    <label for="filter-cdr">Cooldown Reduction</label>
+                                                    <input type="checkbox" id="AttackSpeed" />
+                                                    <label for="AttackSpeed">Attack Speed</label>
                                                 </p>
                                                 <p class="filter-indent">
-                                                    <input type="checkbox" id="filter-mana" />
-                                                    <label for="filter-mana">Mana</label>
+                                                    <input type="checkbox" id="CriticalStrike" />
+                                                    <label for="CriticalStrike">Critical Strike</label>
                                                 </p>
                                                 <p class="filter-indent">
-                                                    <input type="checkbox" id="filter-manaregen" />
-                                                    <label for="filter-manaregen">Mana Regen</label>
+                                                    <input type="checkbox" id="Damage" />
+                                                    <label for="Damage">Damage</label>
                                                 </p>
                                                 <p class="filter-indent">
-                                                    <input type="checkbox" id="filter-ap" />
-                                                    <label for="filter-ap">Ability Power</label>
+                                                    <input type="checkbox" id="LifeSteal" />
+                                                    <label for="LifeSteal">Life Steal</label>
                                                 </p>
                                                 <p>
-                                                    <input type="checkbox" id="filter-movement" />
-                                                    <label for="filter-movement">Movement</label>
+                                                    <input type="checkbox" id="Magic" />
+                                                    <label for="Magic">Magic</label>
                                                 </p>
                                                 <p class="filter-indent">
-                                                    <input type="checkbox" id="filter-boots" />
-                                                    <label for="filter-boots">Boots</label>
+                                                    <input type="checkbox" id="CooldownReduction" />
+                                                    <label for="CooldownReduction">Cooldown Reduction</label>
                                                 </p>
                                                 <p class="filter-indent">
-                                                    <input type="checkbox" id="filter-moveother" />
-                                                    <label for="filter-moveother">Other Movement</label>
+                                                    <input type="checkbox" id="Mana" />
+                                                    <label for="Mana">Mana</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="ManaRegen" />
+                                                    <label for="ManaRegen">Mana Regen</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="Spell Damage" />
+                                                    <label for="Spell Damage">Ability Power</label>
+                                                </p>
+                                                <p>
+                                                    <input type="checkbox" id="Movement" />
+                                                    <label for="Movement">Movement</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="Boots" />
+                                                    <label for="Boots">Boots</label>
+                                                </p>
+                                                <p class="filter-indent">
+                                                    <input type="checkbox" id="NonbootsMovement" />
+                                                    <label for="NonbootsMovement">Other Movement</label>
                                                 </p>
                                             </div>
                                         </form>
