parent filters now work

--- a/public/index.html
+++ b/public/index.html
@@ -86,12 +86,12 @@
                                             <div class="filter-form-title grey darken-4">Filter Items</div>
                                             <div class="form-body">
                                                 <p>
-                                                    <input type="checkbox" id="All" />
-                                                    <label for="All">All Items</label>
+                                                    <input type="checkbox" id="All Items" />
+                                                    <label for="All Items">All Items</label>
                                                 </p>
                                                 <p>
-                                                    <input type="checkbox" id="Starting" />
-                                                    <label for="Starting">Starting Items</label>
+                                                    <input type="checkbox" id="Starting Items" />
+                                                    <label for="Starting Items">Starting Items</label>
                                                 </p>
                                                     <p class="filter-indent">
                                                     <input type="checkbox" id="Jungle" />
@@ -174,8 +174,8 @@
                                                     <label for="ManaRegen">Mana Regen</label>
                                                 </p>
                                                 <p class="filter-indent">
-                                                    <input type="checkbox" id="Spell Damage" />
-                                                    <label for="Spell Damage">Ability Power</label>
+                                                    <input type="checkbox" id="SpellDamage" />
+                                                    <label for="SpellDamage">Ability Power</label>
                                                 </p>
                                                 <p>
                                                     <input type="checkbox" id="Movement" />
