quick header clean up

--- a/public/index.html
+++ b/public/index.html
@@ -4,42 +4,32 @@
     <meta charset="utf-8">
     <title>Item Set Builder</title>
 
-    <!-- JQuery JS -->
+    <!-- JQuery -->
     <script src="js/jquery.js"></script>
 
-    <!-- JQuery UI JS -->
+    <!-- JQuery UI -->
     <script src="js/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="styles/jquery-ui.min.css">
 
-    <!-- JQuery TagIt JS -->
+    <!-- JQuery TagIt -->
     <script src="js/tag-it.min.js"></script>
+    <link rel="stylesheet" href="styles/jquery.tagit.css">
 
-    <!-- JQuery File Upload JS -->
+    <!-- JQuery File Upload -->
     <script src="js/jquery.iframe-transport.js"></script>
     <script src="js/jquery.fileupload.js"></script>
 
-    <!-- OpenTip JS -->
+    <!-- OpenTip-->
     <script src="js/opentip-jquery.min.js"></script>
-
-    <!-- Materialize JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script>
-
-    <!-- item-set-builder JS -->
-    <script src="js/scripts.js"></script>
-
-    <!-- JQuery UI CSS -->
-    <link rel="stylesheet" href="styles/jquery-ui.min.css">
-
-    <!-- JQuery TagIt CSS -->
-    <link rel="stylesheet" href="styles/jquery.tagit.css">
-
-    <!-- Materialize CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-    <!-- OpenTip CSS -->
     <link rel="stylesheet" href="styles/opentip.css">
 
-    <!-- item-set-builder CSS -->
+    <!-- Materialize-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    
+    <!-- item-set-builder -->
+    <script src="js/scripts.js"></script>
     <link rel="stylesheet" href="styles/styles.css">
 
     <!-- favicon -->
