clean up clean up everybody clean up

--- a/public/index.html
+++ b/public/index.html
@@ -5,22 +5,22 @@
     <title>Item Set Builder</title>
 
     <!-- JQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="js/libraries/jquery.js"></script>
 
     <!-- JQuery UI -->
-    <script src="js/jquery-ui.min.js"></script>
+    <script src="js/libraries/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="styles/jquery-ui.min.css">
 
     <!-- JQuery TagIt -->
-    <script src="js/tag-it.min.js"></script>
+    <script src="js/libraries/tag-it.min.js"></script>
     <link rel="stylesheet" href="styles/jquery.tagit.css">
 
     <!-- JQuery File Upload -->
-    <script src="js/jquery.iframe-transport.js"></script>
+    <script src="js/libraries/jquery.iframe-transport.js"></script>
     <script src="js/jquery.fileupload.js"></script>
 
     <!-- OpenTip-->
-    <script src="js/opentip-jquery.min.js"></script>
+    <script src="js/libraries/opentip-jquery.min.js"></script>
     <link rel="stylesheet" href="styles/opentip.css">
 
     <!-- Materialize-->
@@ -29,7 +29,10 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     
     <!-- item-set-builder -->
-    <script src="js/scripts.js"></script>
+    <script src="js/item-block.js"></script>
+    <script src="js/buttons.js"></script>
+    <script src="js/drag-and-drop.js"></script>
+    <script src="js/items-and-set.js"></script>
     <link rel="stylesheet" href="styles/styles.css">
 
     <!-- favicon -->
