fix to error with loading jquery library and fix to append

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
     <!-- JQuery File Upload -->
     <script src="js/libraries/jquery.iframe-transport.js"></script>
-    <script src="js/jquery.fileupload.js"></script>
+    <script src="js/libraries/jquery.fileupload.js"></script>
 
     <!-- OpenTip-->
     <script src="js/libraries/opentip-jquery.min.js"></script>
