--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     
     <!-- item-set-builder -->
+    <script src="js/globals.js"></script>
     <script src="js/item-block.js"></script>
     <script src="js/buttons.js"></script>
     <script src="js/drag-and-drop.js"></script>
@@ -194,27 +195,29 @@
                                         <div class="col s8">
                                             <input placeholder="New Item Set" id="set-form-name" type="text" class="validate">
                                         </div>
-                                        <div class="col s4 valign-wrapper set-info-form-label-container">
-                                            <h5 class="valign set-info-form-label">Maps:</h5>
+                                        <div class="col s12 valign-wrapper set-info-form-label-container">
+                                            <h5 class="valign set-info-form-label">Map Selection</h5>
+                                            <i id="map-help-tooltip" class="material-icons help-tooltip">info</i>
                                         </div>
                                         <div class="col s12">
                                             <div class="row map-container">
                                                 <div class="col s6 no-padding">
-                                                    <img class="map-select" src="images/maps/SR-thin.png" alt="Summoner's Rift">
+                                                    <img class="map-select" src="images/maps/SR-thin.png" alt="Summoner's Rift" data-map="SR" data-mode="CLASSIC">
                                                 </div>
                                                 <div class="col s6 no-padding">
-                                                    <img class="map-select" src="images/maps/CS-thin.png" alt="The Crystal Scar">
+                                                    <img class="map-select" src="images/maps/CS-thin.png" alt="The Crystal Scar" data-map="CS" data-mode="ODIN">
                                                 </div>
                                                 <div class="col s6 no-padding">
-                                                    <img class="map-select" src="images/maps/TT-thin.png" alt="The Twisted Treeline">
+                                                    <img class="map-select" src="images/maps/TT-thin.png" alt="The Twisted Treeline" data-map="TT" data-mode="CLASSIC">
                                                 </div>
                                                 <div class="col s6 no-padding">
-                                                    <img class="map-select" src="images/maps/HA-thin.png" alt="Howling Abyss">
+                                                    <img class="map-select" src="images/maps/HA-thin.png" alt="Howling Abyss" data-map="HA" data-mode="ARAM">
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col s4 valign-wrapper set-info-form-label-container">
-                                            <h5 class="valign set-info-form-label">Champions:</h5>
+                                        <div class="col s12 valign-wrapper set-info-form-label-container">
+                                            <h5 class="valign set-info-form-label">Champions Selection</h5>
+                                            <i id="champ-help-tooltip" class="material-icons help-tooltip">info</i>
                                         </div>
                                         <div class="col s12">
                                             <div class="row champ-container">
