fixed issue with file name not showing in download instructions for champion specific sets

--- a/public/index.html
+++ b/public/index.html
@@ -55,13 +55,13 @@
                 <div id="global-set-instructions">
                     <p>1. As you have chosen a global item set that all champions can use, navigate to:</p>
                     <code>League of Legends\Config\Global\Recommended\</code>
-                    <p>2. Copy the <b id="fileName"></b> file to the folder that you have navigated to.</p>
+                    <p>2. Copy the <b class="fileName"></b> file to the folder that you have navigated to.</p>
                     <p>3. Your item set should now be visible in the item shop to all champions</p>
                 </div>
                 <div id="champ-set-instructions">
                     <p>1. As you have chosen a champion specific item set, navigate to:</p>
                     <code>League of Legends\Config\Champions\<b id="champKey"></b>\Recommended\</code>
-                    <p>2. Copy the <b id="fileName"></b> file to the folder that you have navigated to.</p>
+                    <p>2. Copy the <b class="fileName"></b> file to the folder that you have navigated to.</p>
                     <p>3. Your item set should now be visible in the item shop to your specific champion, <b id="champKey"></b></p>
                 </div>
             </div>
