fixed some issues with download

--- a/public/index.html
+++ b/public/index.html
@@ -255,7 +255,7 @@
                     <ul id="item-set-blocks" class="collapsible" data-collapsible="expandable">
                         <li>
                             <div class="item-block-buttons noselect"><i class="material-icons toggle-item-block-button text-grey text-darken-2">swap_vert</i><i class="material-icons edit-item-block-button">spellcheck</i></div>
-                            <div class="collapsible-header grey-text text-darken-2">New Item Block</div>
+                            <div class="collapsible-header grey-text text-darken-2"><span class="item-block-name">New Item Block</span></div>
                             <div class="collapsible-body grey lighten-3 grey-text text-darken-2">
                                 <div class="item-slots clearfix">
                                     <div class="item-slot slot-1" ondrop="drop(event)" ondragover="allowDrop(event)">
