switched from materialize cdn

--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
     <link rel="stylesheet" href="styles/opentip.css">
 
     <!-- Materialize-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
+    <script src="js/libraries/materialize.min.js"></script>
+    <link rel="stylesheet" href="styles/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     
     <!-- item-set-builder -->
