name change UI changes

--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,9 @@
 </head>
 <body>
     <nav class="grey darken-4 z-depth-4">
-        <div class="container">
+        <div class="container nav-wrapper-container">
             <div class="nav-wrapper">
-                <a href="#" class="brand-logo">Item Set Builder</a>
+                <a href="#" class="brand-logo">bildr</a>
             </div>
         </div>
     </nav>
@@ -299,7 +299,7 @@
     </div>
     <footer class="page-footer grey darken-4">
         <div class="container">
-            <p class="grey-text text-lighten-4" style="text-align: center">Item Set Builder is built with Materialize, Ruby, and Sinatra and is proudly open-source.</p>
+            <p class="grey-text text-lighten-4" style="text-align: center">bildr is built with Materialize, Ruby, and Sinatra and is proudly open-source.</p>
         </div>
         <div class="footer-copyright black">
             <div class="container">
