more minor stylistic changes, gold accents added

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
     <nav class="grey darken-4 z-depth-4">
         <div class="container nav-wrapper-container">
             <div class="nav-wrapper">
-                <a href="#" class="brand-logo">bildr</a>
+                <a href="#" class="brand-logo thin">bildr</a>
             </div>
         </div>
     </nav>
@@ -299,7 +299,7 @@
     </div>
     <footer class="page-footer grey darken-4">
         <div class="container">
-            <p class="grey-text text-lighten-4" style="text-align: center">bildr is built with Materialize, Ruby, and Sinatra and is proudly open-source.</p>
+            <p class="grey-text text-lighten-4 thin" style="text-align: center">bildr is built with Materialize, Ruby, and Sinatra and is proudly open-source.</p>
         </div>
         <div class="footer-copyright black">
             <div class="container">
