--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,11 @@
         </div>
 
         <div id="builder-app" class="container">
+            <div class="fixed-action-btn" style="bottom: 150px; right: 48px;">
+                <a class="btn-floating btn-large grey">
+                    <i class="large material-icons">delete</i>
+                </a>
+            </div>
             <div class="row">
                 <div id="toolbar" class="grey darken-3 grey-text text-lighten-2 col s12 z-depth-3 valign-wrapper">
                     <a id="reset-button" class="waves-effect waves-light btn grey darken-2 valign">Reset</a>
