--- a/public/index.html
+++ b/public/index.html
@@ -78,11 +78,17 @@
             </div>
             <div class="row">
                 <div id="toolbar" class="grey darken-3 grey-text text-lighten-2 col s12 z-depth-3 valign-wrapper">
-                    <a id="reset-button" class="waves-effect waves-light btn grey darken-2 valign">Reset</a>
-                    <a id="upload-button" class="waves-effect waves-light btn grey darken-2 valign">Upload</a>
-                    <a id="download-button" class="waves-effect waves-light btn grey darken-2 valign">Download</a>
-                    <a id="save-button" class="waves-effect waves-light btn grey darken-2 valign">Save</a>
-                    <input type="file" id="hidden-upload-button" style="display:none" onchange="handleFileUpload(this.files)">
+                    <div id="menu-buttons-left">
+                        <a id="reset-button" class="waves-effect waves-light btn grey darken-2 valign">Reset<i class="material-icons right">clear</i></a>
+                        <a id="upload-button" class="waves-effect waves-light btn grey darken-2 valign">Upload<i class="material-icons right">file_upload</i></a>
+                        <a id="download-button" class="waves-effect waves-light btn grey darken-2 valign">Download<i class="material-icons right">file_download</i></a>
+                        <a id="save-button" class="waves-effect waves-light btn grey darken-2 valign">Save<i class="material-icons right">save</i></a>
+                        <input type="file" id="hidden-upload-button" style="display:none" onchange="handleFileUpload(this.files)">
+                    </div>
+                    <div id="menu-buttons-right">
+                        <a id="about-button" class="waves-effect waves-light btn grey darken-2 valign">About / Help<i class="material-icons right">help</i></a>
+                        <a id="summary-button" class="waves-effect waves-light btn grey darken-2 valign">Set Summary<i class="material-icons right">assessment</i></a>
+                    </div>
                 </div>
             </div>
             <div class="row">
