moved script files and minified js

--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,16 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     
     <!-- item-set-builder -->
-    <script src="js/globals.js"></script>
+
+    <!-- un-minified -->
+    <!--<script src="js/globals.js"></script>
     <script src="js/item-block.js"></script>
     <script src="js/buttons.js"></script>
     <script src="js/drag-and-drop.js"></script>
-    <script src="js/items-and-set.js"></script>
+    <script src="js/items-and-set.js"></script>-->
+
+    <!-- minified -->
+    <script src="js/bildr-min-0.1.0.js"></script>
     <link rel="stylesheet" href="styles/styles.css">
 
     <!-- favicon -->
