corrected path to individual files

--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,11 @@
     <!-- item-set-builder -->
 
     <!-- un-minified -->
-    <!--<script src="js/globals.js"></script>
-    <script src="js/item-block.js"></script>
-    <script src="js/buttons.js"></script>
-    <script src="js/drag-and-drop.js"></script>
-    <script src="js/items-and-set.js"></script>-->
+    <!--<script src="js/src/globals.js"></script>
+    <script src="js/src/item-block.js"></script>
+    <script src="js/src/buttons.js"></script>
+    <script src="js/src/drag-and-drop.js"></script>
+    <script src="js/src/items-and-set.js"></script>-->
 
     <!-- minified -->
     <script src="js/bildr-min-0.1.0.js"></script>
