created about dialog

--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,7 @@
         </div>
     </nav>
     <div class="section grey darken-2" id="builder">
+        <!-- Modal Box Containers -->
         <div id="download-instructions-box" class="modal modal-fixed-footer gray">
             <div class="modal-content grey darken-3 grey-text text-lighten-2">
                 <h4>Download Instructions</h4>
@@ -71,7 +72,16 @@
                 </div>
             </div>
             <div class="modal-footer grey darken-3">
-                <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat grey lighten-1">Ok</a>
+                <a href="#!" class=" modal-action modal-close waves-effect waves-grey btn-flat grey lighten-1">Ok</a>
+            </div>
+        </div>
+
+        <div id="help-about-box" class="modal modal-fixed-footer gray">
+            <div class="modal-content grey darken-3 grey-text text-lighten-2">
+                <iframe src="README.html"></iframe>
+            </div>
+            <div class="modal-footer grey darken-3">
+                <a href="#!" class=" modal-action modal-close waves-effect waves-grey btn-flat grey lighten-1">Ok</a>
             </div>
         </div>
 
