--- a/public/index.html
+++ b/public/index.html
@@ -31,14 +31,14 @@
     <!-- item-set-builder -->
 
     <!-- un-minified -->
-    <script src="js/src/globals.js"></script>
+    <!-- <script src="js/src/globals.js"></script>
     <script src="js/src/item-block.js"></script>
     <script src="js/src/buttons.js"></script>
     <script src="js/src/drag-and-drop.js"></script>
-    <script src="js/src/items-and-set.js"></script>
+    <script src="js/src/items-and-set.js"></script> -->
 
-    <!-- minified
-    <script src="js/bildr-min-0.1.0.js"></script> -->
+    <!-- minified -->
+    <script src="js/bildr-min-0.1.0.js"></script>
     <link rel="stylesheet" href="styles/styles.css">
 
     <!-- favicon -->
