changed some colors

--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
                     </div>
                 </div>
                 <div class="summary-box summary-content">
-                    <div class="summary-title-container grey grey-text text-darken-4 row z-depth-3">
+                    <div class="summary-title-container grey darken-2 grey-text text-darken-4 row z-depth-3">
                         <span>Item Set Summary:&nbsp;</span>
                         <span class="summary-title thin white-text"></span>
                     </div>
