smaller font size in tabs

--- a/public/index.html
+++ b/public/index.html
@@ -176,7 +176,7 @@
                         <div class="col s11 grey darken-3 grey-text text-lighten-2 z-depth-3">
                             <div class="row">
                                 <div class="col s12 no-padding">
-                                    <ul class="tabs grey-text text-lighten-2">
+                                    <ul class="tabs grey-text text-lighten-20" style="font-size: 13px">
                                         <li class="tab grey darken-4 col s4"><a class="active" href="#all-items-container">All Items</a></li>
                                         <li class="tab grey darken-4 col s4"><a href="#set-info">Set Info</a></li>
                                         <li class="tab grey darken-4 col s4"><a href="#preset-builds">Preset Builds</a></li>
