added disclaimer to footer

--- a/public/index.html
+++ b/public/index.html
@@ -414,7 +414,7 @@
     </div>
     <footer class="page-footer grey darken-4">
         <div class="container">
-            <p class="grey-text text-lighten-4 thin" style="text-align: center">bildr is built with Materialize, Ruby, and Sinatra and is proudly open-source.</p>
+            <p class="grey-text text-lighten-4 thin" style="text-align: center"><b>bildr</b> isn’t endorsed by Riot Games and doesn’t reflect the views or opinions of Riot Games or anyone officially involved in producing or managing League of Legends. League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.</p>
         </div>
         <div class="footer-copyright black">
             <div class="container">
