hide button text when small screen

--- a/public/index.html
+++ b/public/index.html
@@ -158,15 +158,15 @@
             <div class="row">
                 <div id="toolbar" class="grey darken-3 grey-text text-lighten-2 col s12 z-depth-3 valign-wrapper">
                     <div id="menu-buttons-left">
-                        <a id="reset-button" class="waves-effect waves-light btn grey darken-2 valign">Reset<i class="material-icons right">clear</i></a>
-                        <a id="upload-button" class="waves-effect waves-light btn grey darken-2 valign">Upload<i class="material-icons right">file_upload</i></a>
-                        <a id="download-button" class="waves-effect waves-light btn grey darken-2 valign">Download<i class="material-icons right">file_download</i></a>
-                        <a id="save-button" class="waves-effect waves-light btn grey darken-2 valign">Save<i class="material-icons right">save</i></a>
+                        <a id="reset-button" class="waves-effect waves-light btn grey darken-2 valign"><span class="menu-button-text">Reset</span><i class="material-icons right">clear</i></a>
+                        <a id="upload-button" class="waves-effect waves-light btn grey darken-2 valign"><span class="menu-button-text">Upload</span><i class="material-icons right">file_upload</i></a>
+                        <a id="download-button" class="waves-effect waves-light btn grey darken-2 valign"><span class="menu-button-text">Download</span><i class="material-icons right">file_download</i></a>
+                        <a id="save-button" class="waves-effect waves-light btn grey darken-2 valign"><span class="menu-button-text">Save</span><i class="material-icons right">save</i></a>
                         <input type="file" id="hidden-upload-button" style="display:none" onchange="handleFileUpload(this.files)">
                     </div>
                     <div id="menu-buttons-right">
-                        <a id="about-button" class="waves-effect waves-light btn grey darken-2 valign">About / Help<i class="material-icons right">help</i></a>
-                        <a id="summary-button" class="waves-effect waves-light btn grey darken-2 valign">Set Summary<i class="material-icons right">assessment</i></a>
+                        <a id="about-button" class="waves-effect waves-light btn grey darken-2 valign"><span class="menu-button-text">About / Help</span><i class="material-icons right">help</i></a>
+                        <a id="summary-button" class="waves-effect waves-light btn grey darken-2 valign"><span class="menu-button-text">Set Summary</span><i class="material-icons right">assessment</i></a>
                     </div>
                 </div>
             </div>
