woops uncommented 'minified'

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     <script src="js/src/drag-and-drop.js"></script>
     <script src="js/src/items-and-set.js"></script> -->
 
-    minified
+    <!-- minified -->
     <script src="js/bildr-min-0.1.2.js"></script>
     <link rel="stylesheet" href="styles/styles.css">
 
